# klave

./: .env.example  .gitignore  Cargo.toml  SKILLS.md  kora.example.toml
dashboard/: app.js  index.html  style.css
docs/: ANCHOR.md  CHALLENGE.md  DEEP_DIVE.md  HEARTBEAT.md  IMPLEMENTATION.md  KORA.md  OPENCLAW_INTEGRATION.md  ORCA.md  PRD.md  README.md  REGISTER.md  SIGNATURE.md  SKILLS.md  SOLANA-KEYCHAIN.md  STANDARDS.md
klave-anchor/: Anchor.toml  Cargo.toml
klave-anchor/programs/klave-anchor/: Cargo.toml
klave-anchor/programs/klave-anchor/src/: error.rs  lib.rs
klave-anchor/programs/klave-anchor/src/instructions/vault/: close.rs  init.rs  mod.rs  operation.rs
klave-anchor/programs/klave-anchor/src/state/: vault.rs
klave-anchor/programs/klave-anchor/tests/: test_close.rs  test_deposit.rs  test_initialize.rs  test_withdraw.rs
klave-anchor/programs/klave-anchor/tests/common/: mod.rs
klave-anchor/tests/: Cargo.toml
klave-anchor/tests/src/: test_initialize.rs
klave-cli/: Cargo.toml
klave-cli/src/: deploy.rs  init.rs  main.rs  start.rs  ui.rs  utils.rs
klave-core/: Cargo.toml
klave-core/migrations/: 001_create_agents.sql  002_create_agent_policies.sql  003_create_audit_log.sql  004_add_agent_keypair.sql  005_add_agent_api_keys.sql
klave-core/src/: crypto.rs  db.rs  error.rs  lib.rs  price.rs
klave-core/src/agent/: mod.rs  model.rs  repository.rs  signer.rs
klave-core/src/audit/: store.rs
klave-core/src/policy/: engine.rs
klave-core/src/solana/: gateway.rs  jupiter.rs  mod.rs  orca.rs
klave-core/src/tests/: mod.rs  test_crypto.rs  test_policy_engine.rs
klave-server/: Cargo.toml
klave-server/src/: config.rs  event.rs  lib.rs  main.rs  middleware.rs  response.rs  router.rs  state.rs
klave-server/src/handlers/: agents.rs  events.rs  health.rs  mod.rs  orca.rs  swap.rs  transactions.rs
klave-server/tests/: test_apis.rs
klave-server/tests/common/: mod.rs
sdk/: pyproject.toml
sdk/demo/: __init__.py  main.py  multi_agent_demo.py  simulation.py  utils.py
sdk/klave/: __init__.py  client.py  exceptions.py  models.py  tools.py
