[package]
name = "klave-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "klave"
path = "src/main.rs"

[dependencies]
dotenvy = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
console = "0.16.2"
indicatif = "0.18.4"

[target.'cfg(unix)'.dependencies]
solana-sdk = { workspace = true }

libc = "0.2"
