[package]
name = "klave-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

solana-sdk = { workspace = true }
solana-client = "3"
solana-transaction-client = { package = "solana-transaction", version = "3" }
solana-system-interface = { version = "3", features = ["bincode"] }
solana-commitment-config = "3"
solana-keychain = "0.2.1"
anchor-client = "0.32.1"
reqwest = { version = "0.12.18", features = ["json"] }
base64 = "0.22.1"
klave-anchor = { path = "../klave-anchor/programs/klave-anchor", features = [
    "cpi",
] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
orca_whirlpools = "7.0.1"
orca_whirlpools_core = "2.1.0"
aes-gcm = "0.10.3"
rand = "0.10.0"

[dev-dependencies]
wiremock = "0.6"
