[package]
name = "klave-server"
version = "0.1.0"
edition = "2024"

[dependencies]
klave-core = { path = "../klave-core" }
axum = "0.8.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5.3", features = ["util"] }
anyhow = "1.0.98"
dotenvy = "0.15.7"

klave-anchor = { path = "../klave-anchor/programs/klave-anchor", features = [
    "cpi",
] }
solana-sdk = "3"
solana-system-interface = { version = "3", features = ["bincode"] }
solana-keychain = "0.2.1"
anchor-lang = "0.32.1"

[dev-dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
