[package]
name = "klave-server"
version = "0.1.0"
edition = "2024"

[dependencies]
klave-anchor = { path = "../klave-anchor/programs/klave-anchor", features = [
    "cpi",
] }
klave-core = { path = "../klave-core" }

dotenvy = { workspace = true }
orca_whirlpools = { workspace = true }
orca_whirlpools_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-keychain = { workspace = true }
solana-sdk = { workspace = true }
solana-system-interface = { workspace= true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

anchor-lang = "0.32.1"
anyhow = "1.0.98"
axum = "0.8.8"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
