[project]
name = "klave"
version = "0.1.0"
description = "Python SDK for the KLAVE agentic wallet API."
requires-python = ">=3.10"
dependencies = ["httpx>=0.28,<1", "pydantic>=2.12,<3"]

[project.optional-dependencies]
langchain = ["langchain-core>=1.2,<2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "klave[langchain]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
