[project]
name = "klave-sdk"
version = "0.1.0"
description = "Python SDK for the KLAVE agentic wallet API."
requires-python = ">=3.10"
dependencies = ["httpx>=0.28,<1", "pydantic>=2.12,<3"]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0,<0.4.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai",
    "langchain-google-genai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klave", "demo"]

[project.scripts]
klave-sdk-demo = "demo.main:run_demo"
